turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:19: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  maison(30);droite(90);avance(150);gauche();maison(30);avance(75);gauche(90);avance(150);
                                          ^