turtleart.housemany.HouseMany.scala.code
override def run() {
  def maison(l:Int) {
  avance(l);
  droite(90);
  avance(l);
  droite(90);
  avance(l);
  droite(90);
  avance(l)
  ;droite(90)
	avance(l)
	droite(30);avance(l);droite(120)
avance(l);droite(30);avance(l);droite(90);avance(l);droite(90)
  }
  
  for (i<-0 to 3) {baisseCrayon();maison(30);droite(90);leveCrayon();avance(50);gauche(90)} 
  
  gauche(90);avance(200); droite(90);avance(75);
  maison(30);droite(90);avance(150);gauche();maison(30);avance(75);gauche(90);avance(150);
  for (i<-0 to 3) {baisseCrayon();maison(30);droite(90);leveCrayon();avance(50);gauche(90)}
  
  
}